# Digit-Classifier

./: CMakeLists.txt
apps/: train_model_main.cc
data/: classifying_small_images.txt  classifying_small_labels.txt  sketchpad_image.txt  small_test_images.txt  small_test_labels.txt  training_small_images.txt
include/data_processing/: image.h  model.h  model_classifier.h  model_loader.h
include/visualizer/: naive_bayes_app.h  sketchpad.h
src/: image.cc  model.cc  model_classifier.cc  model_loader.cc
src/visualizer/: naive_bayes_app.cc  sketchpad.cc
tests/: model_classifier_tests.cc  model_loader_tests.cc  model_tests.cc  test_main.cc
